Cambios para no cargar archivos temporales, csv's y el que tiene la API

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
+# Cachés y compilados
+_pycache_/
+*.py[cod]
+*$py.class
+
+# Entorno virtual
+venv/
 .env
+
+# Archivos temporales
+*.log
+*.tmp
+*.bak
 *.csv
-datos/hubspot_export.csv
+
+# Archivos de configuración locales
+config.json
+.env
